# sensor_interfaces

./: README.md  cyclonedds.xml  demo.rviz  dissable_camera_permissions.sh  docker-compose.yml  dockerfile  generate_model.py  give_permissions.sh  install_dds.sh  install_realsense.sh  legged_robot_template.mjcf.jinja  legged_robot_template.urdf.jinja  move_c20.sh  set_cyclonedds_ros_custom.sh  setup_autonomy.sh  source_ros2_env.sh  start_lidar.sh  start_rviz.sh  start_streaming.sh  turn_flash.sh
config/: dhav1.yaml  go2.yaml  m2_metal.yaml
docker/: Dockerfile  Dockerfile.x64  container_run.sh  enter_container.sh  ros_entrypoint.sh  run.sh
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/livox_ros_driver2/share/livox_ros_driver2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  livox_ros_driver2Config-version.cmake  livox_ros_driver2Config.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/livox_ros_driver2/share/livox_ros_driver2/config/: HAP_config.json  MID360_config.json  display_point_cloud_ROS1.rviz  display_point_cloud_ROS2.rviz  mixed_HAP_MID360_config.json
install/livox_ros_driver2/share/livox_ros_driver2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/livox_ros_driver2/share/livox_ros_driver2/launch_ROS2/: msg_HAP_launch.py  msg_MID360_launch.py  rviz_HAP_launch.py  rviz_MID360_launch.py  rviz_mixed.py
install/livox_ros_driver2/share/livox_ros_driver2/msg/: CustomMsg.idl  CustomMsg.msg  CustomPoint.idl  CustomPoint.msg
install/livox_ros_driver2/share/livox_ros_driver2/rust/: Cargo.toml  build.rs
install/m2_metal_description/share/m2_metal_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/m2_metal_description/share/m2_metal_description/cmake/: m2_metal_descriptionConfig.cmake
install/m2_metal_description/share/m2_metal_description/config/: acuracy_test.rviz  api_test.rviz  nav2.rviz
install/m2_metal_description/share/m2_metal_description/launch/: m2_autonomy.launch.py
install/m2_metal_description/share/m2_metal_description/meshes/: FL_calf.STL  FL_foot.STL  FL_thigh.STL  FR_hip.STL  FR_shank.STL  FR_thigh.STL  RL_foot.STL  RL_hip.STL  RR_calf.STL  RR_thigh.STL
install/m2_metal_description/share/m2_metal_description/worlds/: mujoco.world  stair.world  world4.world
install/m2_metal_description/share/m2_metal_description/xacro/: leg.xacro  materials.xacro  test_d435_camera.urdf.xacro
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
install/sensor_description/share/sensor_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_description/share/sensor_description/xacro/: d435.gazebo.xacro  gemini_335.xacro  (+2 more)
install/xterra/share/xterra/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xterra_perception_api/include/camera_interface/: base_camera.hpp  camera_config.hpp
install/xterra_perception_api/include/utils/: image_overlay_utils.hpp
install/xterra_perception_api/share/xterra_perception_api/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: livox.sh
src/Log/: OrbbecSDK.log.txt
src/dds_utils/: CMakeLists.txt  package.xml
src/dds_utils/include/dds_utils/core/: dds_entity.hpp  dds_qos.hpp
src/dds_utils/include/dds_utils/publisher/: dds_publisher.hpp
src/dds_utils/include/dds_utils/subscriber/: dds_subscriber.hpp
src/demo/: CMakeLists.txt  package.xml
src/demo/config/: demo.rviz
src/demo/launch/: rviz.launch.py
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py  rviz_MID360_launch.py
src/m2_metal_description/: CMakeLists.txt  package.xml
src/m2_metal_description/config/: elevation_mapping.rviz  elevation_mapping_sim.rviz  m2_metal_payload.rviz  m2_metal_rviz.rviz  mapping.rviz
src/m2_metal_description/launch/: m2_autonomy.launch.py
src/m2_metal_description/meshes/: FL_hip.STL  FR_foot.STL  RL_calf.STL  RL_thigh.STL  RR_foot.STL  RR_hip.STL  torso.STL
src/m2_metal_description/mujoco/: m2_metal.xml  mjmodel.xml  scene.xml
src/m2_metal_description/urdf/: Torso_Subassembly_Mainnihal(completeMODEL).csv  m2_metal_description.urdf  svan_metal.urdf
src/m2_metal_description/worlds/: world3.world
src/m2_metal_description/xacro/: const.xacro  gazebo.xacro  robot.xacro
src/sensor_description/: CMakeLists.txt
src/sensor_description/xacro/: d435.urdf.xacro  livox_mid360.xacro  threeD_lidar.xacro
src/skydroid_c20/: package.xml  setup.cfg  setup.py
src/skydroid_c20/skydroid_c20/: camera_controller.py  ptz_controller.py  skydroid_c20_controller.py  start_c20.py
src/xterra/: CMakeLists.txt  package.xml
src/xterra/config/: robot_config.yaml
src/xterra/msg/: CameraControl.msg  CameraFrame.msg  JointData.msg  PowerData.msg  QuadLog.msg  SolverStats.msg
src/xterra/src/: MotorController.cpp  robot_config_parser.cpp
src/xterra/srv/: CaptureImage.srv
src/xterra_perception_api/: CMakeLists.txt
src/xterra_perception_api/config/: camera_meta_data.yaml
src/xterra_perception_api/include/orbbec/: orbbec_camera.hpp  orbbec_camera_config.hpp  orbbec_multi_cam_manager.hpp
src/xterra_perception_api/src/camera_interface/: base_camera.cpp
src/xterra_perception_api/src/orbbec/: orbbec_camera.cpp  orbbec_multi_cam_manager.cpp
(+208 files in other folders)
