<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dds_utils</name>
    <version>1.0.0</version>
    <description> Modular, header-only C++ DDS utility library with templates. Provides DDSPublisher
        and DDSSubscriber templates for easy DDS integration. </description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <!-- Build tool dependency -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <build_depend>rmw_cyclonedds_cpp</build_depend>
    <build_depend>cyclonedds</build_depend>

    <!-- Runtime dependencies -->
    <exec_depend>rmw_cyclonedds_cpp</exec_depend>
    <exec_depend>cyclonedds</exec_depend>

    <!-- Export information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>